- libgwyprocess: GwyMaskingType has a public GwyEnum.
- libgwydgets: gwy_radio_buttons_create() accepts also implicitely terminated
  value-name tables.

Modules:
- Attocube (new): Imports Attocube Systems ASC files.
- NanoScan (new): Imports NanoScan XML files.
- Raw XYZ (new): Imports raw XYZ data and regularizes them to a grid.
- NT-MDT: MDA frame support was improved.
- Statistical quantities: The masked area can also be excluded.
- Seiko: Supports more file types (with magic header SPIZ000AFM).
- Pixmap export: TIFFs are written in binary mode, fixing broken exported
  images on MS Windows.
- Pixmap export: It is possible to export data as 16bit grayscale images (at
  present for TIFF, PNG and PNM).
- Object Synthesis: Cone, box and tent shapes were added.

Other:
- Inclusion of wrong OpenGL header when building with Quartz backend was fixed.


2.17 (2009-09-22)
Application:
- Translations updated: Czech, French, Russian.
- OS X integration: menubar, language selection, opening files from Finder.
- Language falls back to system langauge if gwy_locale is unset on Win32.

Libraries:
- libgwyprocess: Real length of extracted profiles was corrected for very
  short lines and different vertical and horizontal measures.
- libgwyprocess: gwy_data_field_area_fit_poly() reall works with NULL mask.
- libgwyprocess: FFT functions no longer unpredictably lose input data with
  FFTW3 -- they now use the FFTW_ESTIMATE planner that preserves the input
- libgwydgets: Resource selection windows can be closed with Esc.

Modules:
- Curvature (new): Calculates global curvature of second-order surfaces.
- RHK-SM4 (new): Imports RHK Technology SM4 files.
- IGOR (new): Imports IGOR Pro binary waves (highly experimental).
- Nanonics (new): Imports Nanonics NAN files (highly experimental).
- FFT Synthesis (new): Generates random surfaces by spectral synthesis.
- Object Synthesis (new): Generates random surfaces by object placement.